// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="test"
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex="-1"
>
  <div>
    <Component />
    <Component
      onClick={[Function]}
    />
  </div>
  <span
    className="divider"
  />
  <img
    alt="expand"
    className="expand"
    src="expand.png"
  />
</div>
`;

exports[`renders disabled 1`] = `
<div
  className="test"
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex="false"
>
  <div>
    <Component />
    <Component
      onClick={[Function]}
    />
  </div>
  <span
    className="divider"
  />
  <img
    alt="expand"
    className="expand"
    src="expand.png"
  />
</div>
`;
